syntax = "proto3";

package user;

option go_package = "./proto;user";

service User {
	rpc SendSmsCode(SendSmsCodeRequest) returns (SendSmsCodeResponse) {}
}

message SendSmsCodeRequest {
	string phoneNumber = 1;
	string captCode = 2;
	string uuid = 3;
}

message SendSmsCodeResponse {
	string message = 1;
	string ok = 2;
}